@@ -4,7 +4,8 @@
 
 == rufus-scheduler - 3.0.7    not yet released
 
-- implement RepeatJob#count
+- implement Job #last_work_time and #mean_work_time
+- implement Job#count
 - add more info to the stderr error output (scheduler/tz info)
 - prevent skipping a day on swith to summertime, gh-114, thanks Matteo
 
